--- a/index.html
+++ b/index.html
@@ -42,12 +42,14 @@
     </div>
     <iframe data-aa="1484732" src="//acceptable.a-ads.com/1484732" scrolling="no"
         style="border:0px; padding:0; width:100%; height:100%; overflow:hidden" allowtransparency="true"></iframe>
-    <button onclick="run()" class="btn btn-secondary btns d-flex justify-content-center">RUN</button>
-    <button onclick="copy()" class="btn btn-secondary btns d-flex justify-content-center">Copy</button>
-    <button onclick="document.getElementById('openFile').click()" class="btn btn-secondary btns d-flex justify-content-center">Upload File</button>
-    <button id="saveAsButton" class="btn btn-secondary btns d-flex justify-content-center">Save As</button>
-    <button onclick="reset()" class="btn btn-secondary btns d-flex justify-content-center">Reset</button>
+    <div class="d-flex justify-content-center">
+    <button onclick="run()" class="btn btn-secondary btns ">RUN</button>
+    <button onclick="copy()" class="btn btn-secondary btns">Copy</button>
+    <button onclick="document.getElementById('openFile').click()" class="btn btn-secondary btns">Upload File</button>
+    <button id="saveAsButton" class="btn btn-secondary btns ">Save As</button>
+    <button onclick="reset()" class="btn btn-secondary btns ">Reset</button>
     <input id="openFile" type="file" accept=".js" hidden>
+    </div>
 
 
 </body>
